--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>AGAIN</h1>
-    <a href="/samweiss1230/contact.html">contact</a>
+    <a href="/AGAIN/contact.html">contact</a>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut expedita fuga, aliquam ea error dolorum aspernatur rerum dolorem quos nesciunt voluptate rem amet ad inventore nobis, ullam consectetur reprehenderit dicta?</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut expedita fuga, aliquam ea error dolorum aspernatur rerum dolorem quos nesciunt voluptate rem amet ad inventore nobis, ullam consectetur reprehenderit dicta?</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut expedita fuga, aliquam ea error dolorum aspernatur rerum dolorem quos nesciunt voluptate rem amet ad inventore nobis, ullam consectetur reprehenderit dicta?</p>
